tests/functional/lang/eval-fail-blackhole.err.exp
error: infinite recursion encountered
       at /pwd/lang/eval-fail-blackhole.nix:2:7:
            1| let
            2|   x = y;
             |       ^
            3|   y = x;
